--- a/HTML/index.html
+++ b/HTML/index.html
@@ -41,7 +41,7 @@
 
 <!-- Ruta relativa  -->
 <img
- src="./img/tigre_relativa.jpg" 
+ src="./img/Tigre_relativa.jpg" 
  alt="Tigre.jpg"
  width=""200"
  height="200"  
@@ -58,6 +58,6 @@
 
  <!-- Etiqueta de video -->
  <video controls width="400" height="200">
-    <source src="./video/videoprueba.mp4" 
+    <source src="./video/Videoprueba.mp4" 
     type="video/mp4">
  </video>
