--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,9 +43,9 @@
 <img
  src="./img/Tigre_relativa.jpg" 
  alt="Tigre.jpg"
- width=""200"
+ width="200"
  height="200"  
-/>
+ />
 
 <!-- Ruta Absoluta -->
 <img
@@ -58,6 +58,5 @@
 
  <!-- Etiqueta de video -->
  <video controls width="400" height="200">
-    <source src="./video/Videoprueba.mp4" 
-    type="video/mp4">
+    <source src="./video/Videoprueba.mp4" >
  </video>
