Terminamos con HTML envío de proyecto
Aprendimos Semantica, links, otra forma de vincular videos, Listas ordenadas y desordenadas, divisores.

Formularios e Inputs (tipo, texto, numero, email).

Envio de proyecto

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,10 @@
     Ct
     Shift + Alt + FlechaArriba0Abajo: Duplicar
     Alt + FlechaArriba0Abajo: Cambiar de linea
+    Shift + tab: Indentar
+    Shift + Ctrl + Z: Deshacer
+    Shift: tabular
+
 --->
 
 <!-- Esto es una etiqueta de parrafo -->
@@ -41,7 +45,7 @@
 
 <!-- Ruta relativa  -->
 <img
- src="./img/tigre_relativa.jpg" 
+ src="./img/Tigre_relativa.jpg" 
  alt="Tigre.jpg"
  width=""200"
  height="200"  
@@ -58,6 +62,5 @@
 
  <!-- Etiqueta de video -->
  <video controls width="400" height="200">
-    <source src="./video/videoprueba.mp4" 
-    type="video/mp4">
+    <source src="./video/Videoprueba.mp4">
  </video>
