--- a/HTML/ejemplo.html
+++ b/HTML/ejemplo.html
@@ -1,11 +1,193 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página de ejemplo</title>
 </head>
+
 <body>
-    
+    <h1>Página Web</h1>
+    <!-- Etiquerta de Botón -->
+    <button>Click aquí</button>
+
+    <!-- Etiqueta de Link 
+     <a> significa ancla
+        tiene como propiedades:
+        href: sirve para indicar la urbicación del recurso
+        target: sirve para indicar donde se abre el recurso
+        -->
+    <p>Etiqueta para ir a google sin targer, es decir me redirecciona a google a la misma página</p>
+    <a href="https://www.google.com">
+        <button>Ir a Google (sin target)</button>
+    </a>
+
+    <p>Etiqueta para ir a la página de inicio sin targer, es decir me redirecciona a inicio en otra pestaña</p>
+    <a href="./index.html" target="_blank">
+        <button>Ir a Inicio (con target)</button>
+    </a>
+
+
+    <p>Enlace por defecto</p>
+    <a href="./index.html">
+        Ir a Inicio </button>
+    </a>
+
+
+    <!-- Lista desordenada 
+    <ul> significa un lista desordenada
+        tiene como propiedades:
+        type: sirve para indicar el estilo de la lista
+        contiene elementos <li>>/li> (elementos de lista) (List items)
+        -->
+    <ul type="square">
+        <ul type="disc">
+            <li>
+                <!-- Nota: puedo colocar enlaces dentro de la lista o de cualquier etiquet HTML -->
+                <a
+                    href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRDSxSg9Aud0x-Kd9elJg_WavzKpLvUySaoA&s">Pan</a>
+            </li>
+            <li>Queso</li>
+            <li>Jamon </li>
+
+        </ul>
+
+
+        <!-- Lista Ordenada 
+    <Ol> significa un lista ordenada
+        tiene como propiedades:
+        type: sirve para indicar el estilo de la lista
+        contiene elementos <li>>/li> (elementos de lista) (List items)
+        -->
+        <h2>Lista de número</h2>
+        <ol>
+            <li>Uno</li>
+            <li>Dos</li>
+            <li>Tres </li>
+
+        </ol>
+
+        <!-- Divisores
+>div> significa un divisor
+tiene como propiedad:
+    type: sirve para indicar el estilo de la lista
+    Contiene elementos <li></li> (List Item)
+
+-->
+
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Molestiae nisi qui fugiat veritatis laborum provident suscipit dolores,
+                porro ipsum aspernatur sed corrupti nam ratione tempora inventore blanditiis officia alias sapiente!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Molestiae nisi qui fugiat veritatis laborum provident suscipit dolores,
+                porro ipsum aspernatur sed corrupti nam ratione tempora inventore blanditiis officia alias sapiente!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Molestiae nisi qui fugiat veritatis laborum provident suscipit dolores,
+                porro ipsum aspernatur sed corrupti nam ratione tempora inventore blanditiis officia alias sapiente!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Molestiae nisi qui fugiat veritatis laborum provident suscipit dolores,
+                porro ipsum aspernatur sed corrupti nam ratione tempora inventore blanditiis officia alias sapiente!
+            </p>
+
+        </div>
+
+        <!-- Etiquetas semanticas similares al <div>
+    <header> Significa cabecera 
+    <main> Significa contenido principal (más uso práctico)
+    <footer> Significa pie de pagina (más uso práctico)
+    <section> Significa seccion
+    <article> Significa articulo
+    <nav> Significa navegacion (más uso práctico)
+    <aside> Significa barra lateral
+  -->
+
+        <!-- Formulario
+<form> Significa formulario
+    Contiene elementos
+     <input type="text" placeholder="Nombre">
+
+    <input type="password" placeholder="Contraseña">
+    <input type="email" placeholder="Correo">
+    <input type="number" placeholder="Edad"> -->
+
+        <!-- <h2>Formulario de registro</h2>
+    <form action="./index.html">
+      <p Nombre:></p>
+      <input type="text" placeholder="Nombre">
+      <p>Contraseña</p>
+      <input type="password" placeholder="Contraseña">
+      <p>Correo</p>
+      <input type="email" placeholder="Correo">
+      <p>Edad</p>
+      <input type="number" placeholder="Edad">
+      <p>Fecha</p>
+      <input type="date" placeholder="Fecha">
+      <p>Color</p>
+      <input type="color" placeholder="Color">
+      <p>Telefono</p>
+      <input type="tel" placeholder="Telefono">
+      <p>URL</p>
+      <input type="url" placeholder="URL">
+      <p>Buscar</p>
+      <input type="search" placeholder="Buscar">
+      <p>Imagen</p>
+      <input type="file" placeholder="Imagen">
+      <input type="submi" value="Enviar"> -->
+
+
+
+        <h2>Formulario de Registro</h2>
+        <form action="./index.html">
+            <p>Nombre:</p>
+            <input type="text" name="name">
+            <p>Contraseña:</p>
+            <input type="password" name="password">
+            <p>Correo:</p>
+            <input type="email" name="email">
+            <p>Edad:</p>
+            <input type="number" name="age">
+            <p>Fecha de Nacimiento:</p>
+            <input type="date" name="birthday">
+            <input type="submit" value="Enviar">
+        </form>
+
+        <!-- Etiqueta para crear espacios <br> -->
+
+        <h3>Titular</h3>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <br> <br> <br>
+            <a href="./index.html" target="_blank">Inicio</a>
+
+
+            <!-- Etiqueta para crear lineas horizontales <hr> -->
+
+        <h3>Titular</h3>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <hr>
+            <hr>
+            <hr>
+            <a href="./index.html" target="_blank">Inicio</a>
+            <hr>
+
+
+
+            <!-- Etiqueta iframe -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ajPvRViK3Hw?si=po0n4xqrDxRrj2Iu"
+                title="YouTube video player"
+                 frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+            </iframe>
+
+
 </body>
+
 </html>
