--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,7 +39,7 @@
 <img
  src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSC4DtHTGprsp7K8u0ZlfSDmIDplvQYH5vniT0I3rpcl6wqBh8b" 
  alt="gato.jpg"
- width=""200"
+ width="200"
  height="200"  
 />
 
